Message Win Remaster

--- a/Sams-Cakes_frontend/css/message.css
+++ b/Sams-Cakes_frontend/css/message.css
@@ -15,7 +15,7 @@ body{
     background-image: url(../img/Fondo\ de\ Bikini.jpg);
 }
 
-.patrick img {
+.animate__bounce img {
     width: 400px;
     height: 400px;
     margin: 0px auto 10px;
