--- a/Sams-Cakes_frontend/css/menuAdmin.css
+++ b/Sams-Cakes_frontend/css/menuAdmin.css
@@ -33,8 +33,10 @@ body{
 
   .menu h3{
     width: 100%;
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
+    text-shadow: 4px 4px 3px rgb(191, 67, 230);
+    color: rgb(83, 83, 83);
     margin-bottom: 30px;
   }
 
