--- a/Sams-Cakes_frontend/css/styleAP.css
+++ b/Sams-Cakes_frontend/css/styleAP.css
@@ -48,6 +48,8 @@ body {
     margin: 0;
     padding: 0 0 0;
     text-align: center;
+    text-shadow: 4px 4px 3px rgb(0, 201, 167);
+    color: rgb(81, 0, 105);
     font-size: 22px;
 }
 
