--- a/Sams-Cakes_frontend/css/message.css
+++ b/Sams-Cakes_frontend/css/message.css
@@ -26,5 +26,6 @@ body{
     width: 100%;
     font-size: 30px;
     text-align: center;
+    text-shadow: 1px 2px rgb(255, 255, 255);
     margin-bottom: 30px;
 }
