--- a/Sams-Cakes_frontend/css/styleAPR.css
+++ b/Sams-Cakes_frontend/css/styleAPR.css
@@ -3,64 +3,177 @@
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
 }
-  
+
 body {
-      width: 100%;
-      height: 100vh;
-      /*display: flex;
-      justify-content: center;
-      align-items: center;
-      max-height: 100vh;
-      flex-direction: column; */
-      background: -webkit-linear-gradient(left, #7987ff, #2a36d8, #787aff);
-      font-family: Arial, Helvetica, sans-serif;
-}
-
-.FormProvider .logo {
-    width: 125px;
-    height: 125px;
-    border-radius: 50%;
-    position: absolute;
-    top: -70px;
-    left: calc(50% - 50px);
-  }
-
-  .FormProvider {
-    width: 600px;
-    height: 490px;
-    background: #fff;
-    position: relative;
-    padding: 60px 40px 80px;
+    width: 100%;
+    height: 100vh;
+    display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
-  }
+    background: -webkit-linear-gradient(left, #7987ff, #2a36d8, #787aff);
+}
 
-  .FormProvider .button{
-    position: relative;
-    display: inline-flex;
-    padding: 25px 30 px;
-    margin: 40px 0;
-    color: #03e9f4;
-    font-size: 24px;
-    text-decoration: none;
-    /*overflow: hidden;*/
-    transition: 0.5s;
-    letter-spacing: 4px;
-  }
+.form-container {
+  width: 600px;
+  height: 490px;
+  background: #fff;
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
 
-  .FormProvider .button:hover{
-      background: #03e9f4;
-      color: #050801;
-      box-shadow: 0 0 5px #03e9f4,
-                  0 0 25px #03e9f4,
-                  0 0 50px #03e9f4,
-                  0 0 200px #03e9f4;
-  }
+.FormProvider {
+  width: 600px;
+  height: 490px;
+  padding: 60px 40px 80px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
 
-  .FormProvider .button .span{
-     position: absolute;
-     display: block;
+.form-logo {
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
+  position: absolute;
+  top: -70px;
+  left: calc(50% - 50px);
+}
+
+.FormProvider h5 {
+  margin: 0;
+  padding: 0 0 0;
+  text-align: center;
+  font-size: 25px;
+}
+
+.txtfield {
+  display: inline-block;
+  width: 49%;
+  border-bottom: 2px solid #adadad;
+  position: relative;
+  margin: 25px auto 5px;
+}
+
+.txtfield input {
+  font-size: 15px;
+  color: #333;
+  border: none;
+  width: 100%;
+  outline: none;
+  background: none;
+  padding: 0 7px;
+  height: 40px;
+}
+
+a {
+  position: relative;
+  display: inline-block;
+  padding: 25px 30px;
+  margin: 40px 0;
+  color: #03e9f4;
+  font-size: 24px;
+  text-decoration: none;
+  overflow: hidden;
+  transition: 0.5s;
+  letter-spacing: 4px;
+}
+
+a:nth-child(1) {
+  filter: hue-rotate(290deg);
+}
+
+a:nth-child(3) {
+  filter: hue-rotate(110deg);
+}
+
+a:hover {
+  background: #03e9f4;
+  color: #050801;
+  box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 200px #03e9f4;
+}
+
+a span {
+  position: absolute;
+  display: block;
+}
+
+a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg,transparent,#03e9f4);
+  animation: animate1 1s linear infinite;
+}
+
+@keyframes animate1 {
+  0% {
+    left: -100%;
   }
+  50%,100% {
+    left: 100%;
+  }
+}
+
+a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg,transparent,#03e9f4);
+  animation: animate2 1s linear infinite;
+  animation-delay: 0.25s;
+}
+
+@keyframes animate2 {
+  0% {
+    top: -100%;
+  }
+  50%,100% {
+    top: 100%;
+  }
+}
+
+a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg,transparent,#03e9f4);
+  animation: animate3 1s linear infinite;
+  animation-delay: 0.5s;
+}
+
+@keyframes animate3 {
+  0% {
+    right: -100%;
+  }
+  50%,100% {
+    right: 100%;
+  }
+}
+
+a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg,transparent,#03e9f4);
+  animation: animate4 1s linear infinite;
+  animation-delay: 0.75s;
+}
+
+@keyframes animate4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,100% {
+    bottom: 100%;
+  }
+}
