--- a/Sams-Cakes_frontend/css/styleAP.css
+++ b/Sams-Cakes_frontend/css/styleAP.css
@@ -1,61 +1,61 @@
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    box-sizing: border-box;
-    font-family: 'Nunito', sans-serif;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
 }
   
 body {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: -webkit-linear-gradient(left, #79fd95, #61c6d3);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: -webkit-linear-gradient(left, #79fd95, #61c6d3);
 }
 
 .form-container {
-    width: 350px;
-    height: 500px;
-    background: #fff;
-    position: relative;
-    border-radius: 10px;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+  width: 350px;
+  height: 500px;
+  background: #fff;
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
 .FormProduct {
-    width: 350px;
-    height: 500px;
-    padding: 60px 40px 80px;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../img/FF1.jpg);
-    color: rgb(42, 3, 92);
-    border-radius: 10px;
+  width: 350px;
+  height: 500px;
+  padding: 60px 40px 80px;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../img/FF1.jpg);
+  color: rgb(42, 3, 92);
+  border-radius: 10px;
 }
 
 .FormProduct .logo {
-    width: 125px;
-    height: 125px;
-    border-radius: 50%;
-    position: absolute;
-    top: -70px;
-    left: calc(50% - 60px);
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
+  position: absolute;
+  top: -70px;
+  left: calc(50% - 60px);
 }
 
 .FormProduct h5{
-    margin: 0;
-    padding: 0 0 0;
-    text-align: center;
-    text-shadow: 4px 4px 3px rgb(0, 201, 167);
-    color: rgb(81, 0, 105);
-    font-size: 22px;
+  margin: 0;
+  padding: 0 0 0;
+  text-align: center;
+  text-shadow: 4px 4px 3px rgb(0, 201, 167);
+  color: rgb(81, 0, 105);
+  font-size: 22px;
 }
 
 .FormProduct select {
-    width: 100%;
-    margin-bottom: 15px;
+  width: 100%;
+  margin-bottom: 15px;
 }
 
 .txtfield {
@@ -129,39 +129,37 @@ body {
 }
 
 a {
-    position: relative;
-    display: inline-block;
-    padding: 12px 12px;
-    margin: 10px;
-    color: #ffffff;
-    background: rgba(255, 0, 187, 0.75);
-    border-radius: 40px;
-    font-size: 15px;
-    text-decoration: none;
-    letter-spacing: 2px;
-    overflow: hidden;
+  position: relative;
+  display: inline-block;
+  padding: 12px 12px;
+  margin: 10px;
+  color: #ffffff;
+  background: rgba(255, 0, 187, 0.75);
+  border-radius: 40px;
+  font-size: 15px;
+  text-decoration: none;
+  letter-spacing: 2px;
+  overflow: hidden;
 }
 span {
-    position: absolute;
-    background: #ffffff;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-    border-radius: 50%;
-    animation: animate 1s linear infinite;
+  position: absolute;
+  background: #ffffff;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  border-radius: 50%;
+  animation: animate 1s linear infinite;
 }
 
 @keyframes animate
 {
-    0%
-    {
-        width: 0;
-        height: 0;
-        opacity: 0.2;
-    }
-    100%
-    {
-        width: 500px;
-        height: 500px;
-        opacity: 0;
-    }
+  0% {
+    width: 0;
+    height: 0;
+    opacity: 0.2;
+  }
+  100% {
+    width: 500px;
+    height: 500px;
+    opacity: 0;
+  }
 }
