--- a/Sams-Cakes_frontend/css/styleLogin.css
+++ b/Sams-Cakes_frontend/css/styleLogin.css
@@ -99,6 +99,17 @@ body {
   cursor: pointer;
 }
 
+label {
+  width: 100%;
+  color: red;
+  font-weight: bold;
+}
+
+.botones {
+  margin-top: 20px;
+  width: 100%;
+}
+
 .login-boton {
   width: 137px;
   height: 50px;
